force-app/main/default/objects/Payment_Release__c/Payment_Release__c.object-meta.xml
<CustomObject>
    <label>Payment Release</label>
    <nameField>
        <displayFormat>PMT-{YYYY}-{000000}</displayFormat>
        <label>Payment Scheduled Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Releases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>