force-app/main/default/objects/Payment_Release__c/fields/Benefit_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Claimed__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Benefit Claimed</label>
    <referenceTo>cve__BenefitClaimed__c</referenceTo>
    <relationshipLabel>Payment Releases</relationshipLabel>
    <relationshipName>Payment_Releases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>