force-app/main/default/objects/Payment_Release__c/fields/Claim__c.field-meta.xml
<CustomField>
    <fullName>Claim__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Claim</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Payment Releases</relationshipLabel>
    <relationshipName>Payment_Releases</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>