force-app/main/default/objects/Payment_Release__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>cve__Payment__c</referenceTo>
    <relationshipLabel>Payment Releases</relationshipLabel>
    <relationshipName>Payment_Releases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>