force-app/main/default/objects/Payment_Release__c/fields/Payment_Specification__c.field-meta.xml
<CustomField>
    <fullName>Payment_Specification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Specification</label>
    <referenceTo>cve__PaymentSpecification__c</referenceTo>
    <relationshipLabel>Payment Releases</relationshipLabel>
    <relationshipName>Payment_Releases</relationshipName>
    <type>Lookup</type>
</CustomField>