force-app/main/default/objects/Payment_Release__c/fields/Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment__c</fullName>
    <label>Risk Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>